[project]
name = "ai-ml-systems"
version = "1.0.0"
description = "Production-grade RAG pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LLM & Embeddings
    "openai>=1.10.0",
    "anthropic>=0.14.0",
    "tiktoken>=0.5.0",
    
    # Vector Store
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    
    # Document Processing
    "pypdf>=3.17.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    
    # Utilities
    "numpy>=1.24.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
